# kab_6-substring_search-

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  benchmark_substr_serch.cpp  benchmark_substr_serch.h
substr_serch/: for_each_point.h  substr_serch.h
test/: CMakeLists.txt  lab_6_test.cpp  lab_6_test.h
